kustomize/dev/mentum-eks-cluster-dev/backend/caput/base/deployment.yml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caput
  labels:
    app.mentum.dev/name: caput
    app.mentum.dev/appRevision: ""
    app.mentum.dev/namespace: mentum
    app.mentum.dev/enviroment: dev
    app.mentum.dev/tier: backend
    app.mentum.dev/resourceType: Deployment
spec:
  minReadySeconds: 0
  revisionHistoryLimit: 3
  replicas: 2
# If only deploying 1 replica, always be sure there is a pod running during updates
  selector:
    matchLabels:
      app.mentum.dev/name: caput
      app.mentum.dev/tier: backend
  template:
    metadata:
      labels:
        app.mentum.dev/name: caput
        app.mentum.dev/tier: backend
    spec:
      containers:
        - name: default
          image: "238975939821.dkr.ecr.us-east-1.amazonaws.com/caput:ded53e7fc9ea36e72a01a25495cdd8bed9045fe0"
          imagePullPolicy: Always
          # TODO: FIX THIS
          ports:
            - containerPort: 8099
              name: http
              protocol: TCP
            # - name: http
            #   containerPort: 8080
            #   protocol: TCP
          resources:
            requests:
              cpu: 50m
              memory: 96Mi
