kustomize/dev/mentum-eks-cluster-dev/backend/caput/base/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: caput
  labels:
    app.mentum.dev/name: caput
    app.mentum.dev/appRevision: ""
    app.mentum.dev/namespace: mentum
    app.mentum.dev/enviroment: dev
    app.mentum.dev/tier: backend
    app.mentum.dev/resourceType: Service
spec:
  type: ClusterIP
  ports:
    - name: caput-port
      targetPort: 8099
      protocol: TCP
      port: 80
  selector:
    app.mentum.dev/name: caput
