kustomize/dev/mentum-eks-cluster-dev/backend/caput/base/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api.dev.mentumqr.com
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  ingressClassName: public-nginx
  rules:
  - host: api.dev.mentumqr.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: caput
            port: 
              number: 80
      - path: /v1/
        pathType: Prefix
        backend:
          service:
            name: caput
            port: 
              number: 80
